--- a/.github/workflows/merge-json-files.yml
+++ b/.github/workflows/merge-json-files.yml
@@ -35,4 +35,6 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add merged.json
         git commit -m "Merged JSON files"
-        git push
+        git push origin HEAD:main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
