--- a/.github/workflows/merge-json-files.yml
+++ b/.github/workflows/merge-json-files.yml
@@ -31,8 +31,12 @@ jobs:
 
     - name: Commit merged file
       run: |
-       git config --global user.name "github-actions[bot]"
-       git config --global user.email "github-actions[bot]@users.noreply.github.com"
-       git add merged.json
-       git commit -m "Merged JSON files"
-       git push https://${{ secrets.TOKEN }}@github.com/YuushaExa/testapi.git HEAD:main
+    - name: Commit merged file
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add merged.json
+        git commit -m "Merged JSON files"
+        git push origin HEAD:main
+    env:
+     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
