--- a/.github/workflows/merge-json-files.yml
+++ b/.github/workflows/merge-json-files.yml
@@ -35,4 +35,4 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add merged.json
         git commit -m "Merged JSON files"
-        git push https://${{ secrets.GITHUB_TOKEN }}@github.com/YuushaExa/testapi.git HEAD:main
+        git push https://${{ secrets.TOKEN }}@github.com/YuushaExa/testapi.git HEAD:main
