--- a/.github/workflows/merge-json-files.yml
+++ b/.github/workflows/merge-json-files.yml
@@ -27,11 +27,7 @@ jobs:
     - name: Merge JSON files
       run: |
         # Combine all JSON files into one array
-        jq -s 'add' result/vn/*.json > vn/merged.json
-
-    - name: Validate JSON
-      run: |
-        jq empty vn/merged.json
+        jq -s 'add' result/vn/*.json > merged.json
 
     - name: Commit merged file
       run: |
